# voyager-index

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSING.md  MANIFEST.in  Makefile  OSS_FOUNDATION.md  PRODUCTION.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
benchmarks/: README.md  _diag_fastpath_scaling.py  _smoke_avx512_diff.md  _smoke_avx512_micro.py  _smoke_avx512_production.py  _smoke_b1_mma.py  _smoke_b1_production.py  _smoke_bucketed_padding.py  _smoke_quora_scale.py  _verify_b1_dispatch.py  add_centroid_codes.py  beir_2026q2_full_sweep.py  beir_benchmark.py  bench_elite_innovations.py  centroid_approx_bench.py  competitive_benchmark.md  diag_rroq158_breakdown.py  diag_rroq158_kernel_vs_fp16.py  diag_rroq158_rescue.py  diag_rroq4_riem_breakdown.py  eval_100k.py  fast_plaid_head_to_head.py  gem_vs_hnsw_benchmark.py  latency_opportunity_bench.py  microbench_rroq158_vs_fp16_cpu.py  oss_reference_benchmark.py  pareto_frontier.py  promotion_gates.py  run_rroq158_prod_sweep.py  topk_overlap_sweep.py  track_b_benchmark.py
benchmarks/data/: prepare_beir_100k.py  prepare_beir_datasets.py
benchmarks/multimodal/: eval_runner.py
benchmarks/results/: e2e.json  eval_10k_dim128.json  eval_1k_dim128.json  eval_5k_dim128.json  filter_selectivity_20260409_183314.json  full_eval_20260409_201907.json  gem_quality.json  gem_vs_hnsw_1024.json  graph_qa_churn_o2.json  graph_qa_churn_o3.json  graph_qa_construction_bias_c1.json  graph_qa_graph_health_gh2.json  graph_qa_multimodal_m1_tpd1024.json  graph_qa_multimodal_m1_tpd128.json  graph_qa_multimodal_m1_tpd32.json  graph_qa_multimodal_m1_tpd512.json  graph_qa_performance_p1.json  graph_qa_performance_p2.json  graph_qa_report.json  graph_qa_search_quality_q1.json  latest.json  optimization_results.txt
benchmarks/shard_bench/: baselines.py  metrics.py  run_benchmark.py  sweep_k.py
colsearch/: __init__.py  _config_impl.py  _kernels_impl.py  _search_impl.py  _server_impl.py  config.py  index.py  kernels.py  multimodal.py  preprocessing.py  search.py  server.py  transport.py
colsearch/_internal/: __init__.py
deploy/k8s/: manifests.yaml
deploy/reference-api/: Dockerfile  docker-compose.yml
docs/: README.md  benchmarks.md  full_feature_cookbook.md  index.md  reference_api_tutorial.md
docs/api/: python.md  rust.md
docs/benchmarks/: fast-plaid-head-to-head.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: colbert.md  colpali.md  control-plane.md  gem-native.md  groundedness-beta.md  groundedness-sidecar.md  rroq-mathematics.md  (+5 more)
examples/: README.md  __init__.py  reference_api_feature_tour.py  reference_api_happy_path.py  vllm_pooling_provider.py
internal/: README.md  ROADMAP.md
reports/: audit_rroq158_cpu_2026q2.md  beir_fp16_full.jsonl  beir_postfix_rroq158_cpu.jsonl  beir_postfix_rroq4_riem_cpu.jsonl  beir_postfix_rroq4_riem_cpu.jsonl.with_anomaly.bak  beir_rroq158_full.jsonl  beir_rroq158_nfcorpus.json  beir_rroq158_scidocs.json  diag_rroq158_T512.json  diag_rroq158_breakdown.json  diag_rroq158_breakdown_16t.json  diag_rroq158_breakdown_20k_16t.json  diag_rroq158_breakdown_post.json  diag_rroq158_breakdown_post_blas.json  diag_rroq158_breakdown_post_torch1.json  diag_rroq158_breakdown_pre.json  diag_rroq4_riem_T512_postfix.json  diag_rroq4_riem_breakdown.json  kernel_rroq158.json  kernel_rroq158_rust.json  kernel_rroq4_riem.json  kernel_rroq4_riem_rust.json  phase15_gate_cpu.json  rroq158_hybrid_prototype.md  rroq158_hybrid_prototype_log.txt  rroq158_pareto_arguana.md  rroq158_pareto_fiqa.md  rroq158_pareto_nfcorpus.md
research/: README.md
scripts/: format_beir_2026q2_table.py  full_feature_validation.py  install_from_source.sh  merge_postfix_cpu_into_sweep.py  packaged_install_smoke.py  release_validation_report.py  rroq158_pareto_probe.py  run_postfix_rroq4_sweep.sh  shard_refactor_parity_report.py
src/kernels/gem_index/: Cargo.toml  pyproject.toml
src/kernels/gem_index/src/: emd.rs  ensemble.rs  graph.rs  id_tracker.rs  lib.rs  mutable.rs  network_simplex.rs  persistence.rs  score_cache.rs  search.rs  visited.rs
src/kernels/gem_router/: Cargo.toml  pyproject.toml
src/kernels/gem_router/src/: adaptive_cutoff.rs  codebook.rs  lib.rs  persistence.rs  router.rs
src/kernels/hnsw_indexer/: Cargo.toml  pyproject.toml
src/kernels/knapsack_solver/: Cargo.toml  README.md  pyproject.toml
src/kernels/shard_engine/: Cargo.toml  pyproject.toml
src/kernels/shard_engine/.cargo/: config.toml
src/kernels/shard_engine/src/: centroid_approx.rs  fused_maxsim.rs  fused_rroq158.rs  fused_rroq4_riem.rs  lib.rs  merged_mmap.rs  metadata.rs  mmap_reader.rs  simd_proxy.rs  state.rs  topk.rs  types.rs  wal.rs
tests/: conftest.py  test_benchmark_hybrid_rrf_vs_tabu_parity.py  test_document_preprocessing.py  test_full_feature_validation_native.py  test_gem_gaps_integration.py  test_gem_roq_rerank.py  test_groundedness_service.py  test_hnsw_manager.py  test_hybrid_shard.py  test_latence_graph_crud.py  test_latence_graph_lightrag.py  test_latence_graph_quality.py  test_maxsim_parity.py  test_multimodal_storage.py  test_ontology_fixture_contract.py  test_oss_foundation_surface.py  test_oss_release_hygiene.py  test_prototype_screening.py  test_qa_savage.py  test_reference_api_contract.py  test_reference_api_persistence.py  test_reference_api_security.py  test_release_polish_surface.py  test_roq_diagnostic.py  test_rotational.py  test_rroq158_kernel.py  test_rroq4_riem_e2e.py  test_rroq4_riem_kernel.py  test_search_pipeline_contract.py  test_shard_advanced.py  test_shard_crud_wal.py  test_shard_engine.py  test_shard_engine_api.py  test_shard_hardening.py  test_shard_http_api.py  test_shard_refactor_contracts.py  test_shard_roq4.py  test_shard_serving_wiring.py  test_stateless_optimizer_frontier.py
tools/: README.md
voyager_index/: __init__.py  index.py  multimodal.py  transport.py
(+368 files in other folders)
