[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voyager-index"
version = "0.1.2"
description = "The first open-source native multi-vector index. GEM graph index and LEMUR-routed shard engine for ColBERT/ColPali late-interaction retrieval — 52x faster than HNSW, sub-5ms shard search at 100K, full CRUD+WAL, GPU Triton MaxSim, ROQ 4-bit quantization, filters, and self-healing graphs."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = [
  "LICENSE",
  "LICENSING.md",
  "THIRD_PARTY_NOTICES.md",
  "src/kernels/vendor/qdrant/LICENSE",
]
authors = [
  { name = "Latence AI" }
]
keywords = [
  "retrieval",
  "late-interaction",
  "multi-vector",
  "colbert",
  "colpali",
  "maxsim",
  "graph-index",
  "gem",
  "vector-search",
  "quantization",
  "roq",
  "triton",
  "multimodal",
  "rag",
  "bm25",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Database :: Database Engines/Servers",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.26,<3",
  "torch>=2.2,<3",
  "h5py>=3.10,<4",
  "bm25s>=0.2,<1",
  "PyStemmer>=2.2,<3",
]

[project.optional-dependencies]
server = [
  "fastapi>=0.111,<1",
  "uvicorn>=0.30,<1",
  "pydantic>=2,<3",
  "Pillow>=10,<12",
  "PyMuPDF>=1.24,<2",
  "python-docx>=1.1,<2",
  "openpyxl>=3.1,<4",
]
gpu = [
  "triton>=2.1,<4",
]
shard = [
  "faiss-cpu>=1.7",
  "safetensors>=0.3",
]
hnswlib-engine = [
  "hnswlib>=0.8,<1",
]
native-build = [
  "maturin>=1.5,<2.0",
]
native-hnsw-build = [
  "maturin>=1.5,<2.0",
]
native-solver-build = [
  "maturin>=1.5,<2.0",
]
native-gem-build = [
  "maturin>=1.5,<2.0",
]
multimodal = [
  "httpx>=0.27,<1",
  "Pillow>=10,<12",
]
preprocessing = [
  "Pillow>=10,<12",
  "PyMuPDF>=1.24,<2",
  "python-docx>=1.1,<2",
  "openpyxl>=3.1,<4",
]
native = [
  "latence-hnsw>=0.1.1",
  "latence-solver>=0.1.1",
  "latence-gem-router>=0.1.1",
  "latence-gem-index>=0.1.2",
]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<6",
]

[project.scripts]
voyager-index-server = "voyager_index.server:main"

[project.urls]
Homepage = "https://github.com/ddickmann/voyager-index"
Repository = "https://github.com/ddickmann/voyager-index"
Issues = "https://github.com/ddickmann/voyager-index/issues"
Changelog = "https://github.com/ddickmann/voyager-index/blob/main/CHANGELOG.md"

[tool.setuptools]
include-package-data = true
packages = [
  "voyager_index",
  "voyager_index._internal",
  "voyager_index._internal.server",
  "voyager_index._internal.server.api",
  "voyager_index._internal.inference",
  "voyager_index._internal.inference.control",
  "voyager_index._internal.inference.distributed",
  "voyager_index._internal.inference.engines",
  "voyager_index._internal.inference.fusion",
  "voyager_index._internal.inference.gym",
  "voyager_index._internal.inference.index_core",
  "voyager_index._internal.inference.index_gpu",
  "voyager_index._internal.inference.quantization",
  "voyager_index._internal.inference.utils",
  "voyager_index._internal.kernels",
]

[tool.setuptools.package-data]
voyager_index = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["voyager_index"]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
pythonpath = [
  ".",
]
markers = [
  "graph_qa_quick: fast graph QA gates for per-PR CI (~15-20s build on 500-doc subset)",
  "graph_qa_nightly: thorough graph QA gates for nightly runs (~2-3 min build on full 2.5K corpus)",
]
