[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voyager-index"
version = "0.1.3"
description = "Shard-first late-interaction retrieval for ColBERT and ColPali style workloads with CPU/GPU modes, Triton MaxSim, BM25 hybrid search, durable CRUD/WAL, multimodal preprocessing, and base64-ready reference APIs."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = [
  "LICENSE",
  "LICENSING.md",
  "THIRD_PARTY_NOTICES.md",
]
authors = [
  { name = "Latence AI" }
]
keywords = [
  "retrieval",
  "late-interaction",
  "multi-vector",
  "colbert",
  "colpali",
  "maxsim",
  "shard",
  "vector-search",
  "quantization",
  "roq",
  "triton",
  "multimodal",
  "rag",
  "bm25",
  "tabu-search",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Database :: Database Engines/Servers",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.26,<3",
  "torch>=2.2,<3",
  "h5py>=3.10,<4",
  "bm25s>=0.2,<1",
  "PyStemmer>=2.2,<3",
]

[project.optional-dependencies]
server = [
  "fastapi>=0.111,<1",
  "uvicorn>=0.30,<1",
  "pydantic>=2,<3",
  "Pillow>=10,<12",
  "PyMuPDF>=1.24,<2",
  "python-docx>=1.1,<2",
  "openpyxl>=3.1,<4",
]
gpu = [
  "triton>=2.1,<4",
]
shard = [
  "faiss-cpu>=1.7",
  "safetensors>=0.3",
]
shard-native = [
  "latence-shard-engine>=0.1.3",
]
hnswlib-engine = [
  "hnswlib>=0.8,<1",
]
native-build = [
  "maturin>=1.5,<2.0",
]
native-solver-build = [
  "maturin>=1.5,<2.0",
]
multimodal = [
  "httpx>=0.27,<1",
  "Pillow>=10,<12",
]
preprocessing = [
  "Pillow>=10,<12",
  "PyMuPDF>=1.24,<2",
  "python-docx>=1.1,<2",
  "openpyxl>=3.1,<4",
]
solver = [
  "latence-solver>=0.1.3",
]
native = [
  "latence-shard-engine>=0.1.3",
  "latence-solver>=0.1.3",
]
latence-graph = [
  "latence>=0.1.1",
]
full = [
  "fastapi>=0.111,<1",
  "uvicorn>=0.30,<1",
  "pydantic>=2,<3",
  "Pillow>=10,<12",
  "PyMuPDF>=1.24,<2",
  "python-docx>=1.1,<2",
  "openpyxl>=3.1,<4",
  "faiss-cpu>=1.7",
  "safetensors>=0.3",
  "httpx>=0.27,<1",
  "latence-shard-engine>=0.1.3",
  "latence-solver>=0.1.3",
  "latence>=0.1.1",
]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<6",
  "tomli>=2,<3; python_version<'3.11'",
]

[project.scripts]
voyager-index-server = "voyager_index.server:main"

[project.urls]
Homepage = "https://github.com/ddickmann/voyager-index"
Repository = "https://github.com/ddickmann/voyager-index"
Issues = "https://github.com/ddickmann/voyager-index/issues"
Changelog = "https://github.com/ddickmann/voyager-index/blob/main/CHANGELOG.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
voyager_index = ["py.typed"]

[tool.setuptools.packages.find]
include = ["voyager_index*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["voyager_index"]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
pythonpath = [
  ".",
]
markers = [
  "graph_qa_quick: archived legacy graph QA marker for historical research tests",
  "graph_qa_nightly: archived legacy graph QA marker for historical research tests",
]
