[package]
name = "latence-gem-index"
version = "0.1.0"
edition = "2021"
authors = ["Latence Team"]
description = "Native GEM graph index for multi-vector retrieval (ColBERT/ColPali)"
license = "Apache-2.0"

[lib]
name = "latence_gem_index"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
latence-gem-router = { path = "../gem_router" }
rayon = "1.10"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
crc32fast = "1"
byteorder = "1"
rand = "0.8"
thiserror = "2.0"
memmap2 = "0.9"
bit-set = "0.8"
anyhow = "1"
tempfile = "3"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
