[package]
name = "latence-gem-index"
version = "0.1.2"
edition = "2021"
authors = ["Latence Team"]
description = "Native GEM graph index for multi-vector retrieval — filter routing, GPU qCH, self-healing graphs, multi-modal ensembles"
license = "Apache-2.0"

[lib]
name = "latence_gem_index"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
latence-gem-router = { path = "../gem_router" }
rayon = "1.10"
matrixmultiply = "0.3"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
crc32fast = "1"
byteorder = "1"
rand = "0.8"
thiserror = "2.0"
memmap2 = "0.9"
bit-set = "0.8"
anyhow = "1"
tempfile = "3"
log = "0.4"
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"
