[package]
name = "latence-hnsw"
version = "0.1.1"
edition = "2021"
authors = ["Latence Team"]
description = "Python bindings for Qdrant Segment HNSW"
license = "CC-BY-NC-4.0"

[lib]
name = "latence_hnsw"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"

# Qdrant core (vendored via path)
segment = { path = "../vendor/qdrant/lib/segment", features = ["rocksdb"] }
common = { path = "../vendor/qdrant/lib/common/common" }

# Re-export qdrant dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
parking_lot = "0.12"
tempfile = "3"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
