[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "latence_hnsw"
version = "0.1.1"
description = "Qdrant HNSW Indexer Wrapper"
authors = [{name = "Latence AI", email = "dev@latence.ai"}]
license = { text = "CC-BY-NC-4.0" }
requires-python = ">=3.8"
dependencies = ["numpy"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "latence_hnsw"
