[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "latence-solver"
version = "0.1.5"
description = "CPU-reference-first Tabu Search Quadratic Knapsack solver with optional accelerator hooks"
readme = "README.md"
license = { text = "CC-BY-NC-4.0" }
authors = [
    { name = "Latence Team", email = "dev@latence.ai" }
]
keywords = ["optimization", "knapsack", "tabu-search", "cpu", "machine-learning", "search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
]

[project.urls]
Homepage = "https://github.com/ddickmann/voyager-index"
Repository = "https://github.com/ddickmann/voyager-index"

[tool.maturin]
# Build with Python bindings and CPU backend by default
features = ["python", "cpu"]
# Module name matches the Rust lib name
module-name = "latence_solver"
# Python source layout
python-source = "python"
# Omit `strip` here: `maturin develop` uses debug symbols and conflicts with strip.
# Release wheels/CI can pass `--strip` to maturin or rely on Cargo `[profile.release]`.

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

