[package]
name = "latence-shard-engine"
version = "0.1.3"
edition = "2021"
authors = ["Latence Team"]
description = "Lock-free shard engine for multi-vector retrieval — ArcSwap snapshots, WAL, mmap shards, GPU scoring callbacks"
license = "Apache-2.0"

[lib]
name = "latence_shard_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
arc-swap = "1"
crc32fast = "1"
byteorder = "1"
memmap2 = "0.9"
parking_lot = "0.12"
safetensors = "0.7"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "2.0"
rayon = "1.12"
half = "2.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"
